<resources>
    <string name="app_name">Keepcart</string>
    <string name="email">Email ID</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_empty_password">password should not be empty</string>
    <string name="login">LOGIN</string>
    <string name="or_log_in_with">or log in with</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google+</string>
    <string name="skip_login">&lt;&lt;Skip Login&gt;&gt;</string>
    <string name="please_wait">Please Wait</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="gender">Gender</string>
    <string name="mobile_num">Mobile No</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="upload_pan_card">Upload \nPan Card</string>
    <string name="upload_aadhar_card">Upload \nAadhar Card</string>
    <string name="bank_account_num">Bank Account Number</string>
    <string name="ifsc_code">IFSC CODE</string>
    <string name="sign_up_btn">SIGN UP</string>
    <string name="or_sign_up_with">or sign up with</string>
    <string name="signing_up_text_View">By Signing up,you agree to keep cart\'s <font color='#33ccff'> Terms  Conditions <font color='#FFFFFFFF'>&amp;</font> Privacy Policy</font></string>
    <string name="login_success">Login Successful</string>
    <string name="product_item_weight"> 0kg </string>
    <string name="product_price_text">150</string>
    <string name="product_item_offer_price">  250 </string>
    <string name="product_item_saved_price">  250 </string>
    <string name="product_item_add">  ADD </string>
    <string name="product_item_plus_icon">  + </string>
    <string name="product_item_wieght"> 10kg </string>
    <string name="product_original_price_text"> \u20B9 0 </string>
    <string name="Rs">\u20B9 </string>
    <string name="RsSybol">\u20B9</string>
    <string name="price">150</string>
    <string name="product_name">Kinnaur Apple</string>
    <string name="product_item_wght">100 kg</string>
    <string name="quantity">10</string>
    <string name="address_text">Senthil Nathan</string>
    <string name="no_72_address">No:72 Amman Kovil Street, Venkatapuram,GCT(Post),COIMBATORE,TAMIL NADU 641025 India</string>
    <string name="edit_text">EDIT</string>
    <string name="set_as_default">SET AS DEFAULT</string>
    <string name="verifiy_query">Please Wait while we verify your mobile number</string>
    <string name="resend">Resend</string>
    <string name="otp_hint">Enter OTP</string>
    <string name="verify_text_otp">VERIFY</string>
    <string name="continue_txt">CONTINUE</string>
    <string name="total_amount">Total :</string>
    <string name="order_id">Order Id : </string>
    <string name="order_num">ORD1252544</string>
    <string name="text_date">Dec 3,2017,5.40pm</string>
    <string name="text_price">\u20B9 150.0</string>
    <string name="rupees_price">\u20B9</string>
    <string name="text_offers_description">High Quality fruits and vegetables are available for Express deliver1 High Quality fruits and vegetables are available for Express <delivery></delivery></string>
    <string name="in_progress">In Progress</string>
    <string name="express_delivery">High Quality fruits and vegetables are available for Express delivery</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="reenter_password">Confirm New Password</string>
    <string name="change">CHANGE</string>
    <string name="address_nick_name">Address Nickname</string>
    <string name="address_first_name">First Name</string>
    <string name="address_last_name">Last Name</string>
    <string name="address_mobile_number">Mobile Number</string>
    <string name="address_locality">Locality</string>
    <string name="address_house_no_details">House No &amp; Details</string>
    <string name="residential_complex">Residential Complex</string>
    <string name="address_area">Area</string>
    <string name="address_pincode">Pincode</string>
    <string name="address_street_name">Street Name(Optional)</string>
    <string name="address_landmarks">Landmarks(Optional)</string>
    <string name="make_this_as_default_address">Make this as default address</string>
    <string name="save_address">SAVE</string>
    <string name="add_cart">ADD PRODUCTS</string>
    <string name="no_product">No products found</string>
    <string name="cart_empty">Cart is empty</string>
    <string name="add_address">No Address found</string>
    <string name="fruits_vegetables">Fruits &amp; Vegetables</string>
    <string name="fruit_vegetable_baskets">Fruit &amp; vegetable baskets,fruits,vegetables,Cut Fresh,Sprouts &amp; Herbs</string>
    <string name="payment_status">Payment Status</string>
    <string name="order_id_payment">Order Id: </string>
    <string name="ok_text">OK</string>
    <string name="ord_3245345">ORD 3245345</string>
    <string name="placed_on">Placed On:</string>
    <string name="delivered_on">Delivered On:</string>
    <string name="shipping_adress">Shipping Address:</string>
    <string name="order_summary">Order Summary</string>
    <string name="qty_2">QTY:</string>
    <string name="status">Status:</string>
    <string name="transist">In Transist</string>
    <string name="wallet">Wallet</string>
    <string name="wallet_balance">Balance: </string>
    <string name="history">History</string>
    <string name="credited">Credited</string>
    <string name="purchased">Purchased</string>
    <string name="_2000_00">+2000.00</string>
    <string name="add_money">Add Money</string>
    <string name="refer_your_friends_earn">Refer Your Friends &amp; Earn</string>
    <string name="referral">Ask your friends to signup with\nyour referral code and earn\n \u20B9 20 for each</string>
    <string name="share_now">SHARE NOW</string>
    <string name="sj12e3er3">SJ12E3ER3</string>
    <string name="referral_link">Get Referral Link</string>
    <string name="your_referral_code">Your Referral Code</string>
    <string name="in_90_minutes">In 90 Minutes</string>
    <string name="express">Express</string>
    <string name="standard">Standard</string>
    <string name="tomarro_9">Tomarrow 9:30am-12:00pm</string>
    <string name="order_now">Order Now</string>
    <string name="check_out">CHECKOUT</string>
    <string name="delivery_date">Delivery Date</string>
    <string name="pre_order">Pre Order</string>
    <string name="november_30_2017">November 30,2017</string>
    <string name="_1_what_is_lorem_ipsum">What is Lorem Ipsum?</string>
    <string name="sub_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum has
        been the industrys standard dummy text ever since the 1500s,when an unknown printer took gallery of type and
        scrambled it to make a type specimen book.It has survived not only five centuries, but also the leap into
        electronic typesetting,remaining essentially unchanged.</string>
    <string name="payment_method">Payment method</string>
    <string name="pay_later">Pay later</string>
    <string name="pay_14days_after_delivery">Pay 14days after delivery</string>
    <string name="credit_card_number">Credit card number</string>
    <string name="pay">Pay &gt;&gt;</string>
    <string name="pre_order_cart">PRE ORDER</string>
    <string name="order_now_cart">ORDER NOW</string>
    <string name="go_to_cart">GO TO CART</string>
    <string name="shop_details">Shop for Rs442 more and availRs50 offer during order</string>
    <string name="_8_items">8 Items</string>
    <string name="cart_amt">Total: \u20B9 150.00</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="sort_by_price">Sort By Price</string>
    <string name="filters">FILTERS</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_result_found">No result found</string>
    <string name="refresh">Refresh</string>
    <string name="woops_something_went_wrong">Whoops! Something went wrong !!</string>
    <string name="retry">Retry</string>
    <string name="search_hint">Search for 100+ products</string>
    <string name="shop_by_cat">Shop By Category</string>
    <string name="best_deals">Best Deals</string>
    <string name="view_all">View all</string>
    <string name="dummy_prdoct_name">Fruits and Vegitables</string>
    <string name="delivery_location">Delivery Location</string>
    <string name="dummy_address">Please select the address</string>
    <string name="dummy_profil_name">Fugenx Techhnology</string>
    <string name="dummy_email_id">senthilnathan@gmail.com</string>
    <string name="home">Home</string>
    <string-array name="my_account">
        <item>@string/my_orders</item>
        <item>@string/my_wallet</item>
        
        
        <item>@string/my_profile</item>
        <item>@string/change_pswrd</item>
        <item>@string/delivery_address</item>
        <item>@string/logout</item>
    </string-array>
    <string name="refer_earn">Refer &amp; Earn</string>
    <string name="smart_basket">Smart Basket</string>
    <string name="shop_by_category">Shop By Category</string>
    <string name="by_category">Category</string>
    <string name="offers">Offers</string>
    <string name="special_shops">Specials Shop</string>
    <string name="wish_list">Wishlist</string>
    <string name="customer_services">Customer Service</string>
    <string name="notifications">Notifications</string>
    <string name="notification">Notification</string>
    <string name="faqs">FAQs</string>
    <string name="my_orders">My Orders</string>
    <string name="my_wallet">My Wallet</string>
    <string name="third_prty_payment">Third Party Payment Order</string>
    <string name="pay_now_fr_order">Pay Now For Order</string>
    <string name="my_profile">My Profile</string>
    <string name="change_pswrd">Change Password</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="my_delivery_address">My Delivery Address</string>
    <string name="logout">Logout</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="remove_from_cart">Remove</string>
    <string-array name="nav_title_list">
        <item>@string/home</item>
        <item>@string/smart_basket</item>
        <item>@string/shop_by_category</item>
        <item>@string/my_account</item>
        <item>@string/refer_earn</item>
        
        
        <item>@string/wish_list</item>
        <item>@string/customer_services</item>
        <item>@string/notifications</item>
        <item>@string/faqs</item>
    </string-array>
    <string-array name="dummy_cat">
        <item>"Fresh vegetables"</item>
        <item>"Herbs &amp; Seasonings"</item>
        <item>"Cuts &amp; Sprouts"</item>
        <item>"Organic Vegetables"</item>
        <item>"Flowers Fruits"</item>
    </string-array>
    <string name="register">Register</string>
    <string name="shopByCategory">Shop By Category</string>
    <string name="cart">Cart</string>
    <string name="cart_summary">Cart Summary</string>
    <string name="search">Search</string>
    <string name="btn_apply">APPLY</string>
    <string name="coupon_string">APYSDFG</string>
</resources>