<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".screens.register.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/dummy_image"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dimens_30"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_firstName"
                style="@style/register_edit_text"
                android:hint="@string/first_name"
                android:inputType="text" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_lastName"
                style="@style/register_edit_text"
                android:hint="@string/last_name"
                android:inputType="text" />

            <LinearLayout
                android:id="@+id/linear_layout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimens_35"
                android:layout_marginTop="@dimen/dimens_15"
                android:alpha="0.8"
                android:background="@drawable/bg_corner_radius"
                android:orientation="horizontal"
                android:padding="@dimen/padding_10"
                android:visibility="visible">

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/im_gender"
                    android:layout_width="15dp"
                    android:layout_height="@dimen/dimens_35"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_gender" />

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/sp_gender"
                    style="@style/spinner_reg"
                    android:layout_marginStart="@dimen/dimens_5"
                    android:layout_marginEnd="@dimen/dimens_5"
                    android:layout_weight="1" />

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/im_drop_down"
                    android:layout_width="20dp"
                    android:layout_height="@dimen/dimens_35"
                    android:layout_gravity="center"
                    android:visibility="visible"
                    app:srcCompat="@drawable/ic_arrow_drop_down" />
            </LinearLayout>

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_mobileNumber"
                style="@style/register_edit_text"
                android:hint="@string/mobile_num"
                android:maxLength="10"
                android:inputType="number" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_emailId"
                style="@style/register_edit_text"
                android:hint="@string/email"
                android:inputType="text" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_pass"
                style="@style/register_edit_text"
                android:hint="@string/password"
                android:maxLength="12"
                android:inputType="textPassword" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_confirmPass"
                style="@style/register_edit_text"
                android:maxLength="12"
                android:hint="@string/confirm_password"
                android:inputType="textPassword" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimens_10"
                android:orientation="horizontal"
                android:visibility="gone">

                <android.support.v7.widget.CardView
                    style="@style/card_view"
                    android:layout_weight="1"
                    android:alpha="0.8"
                    app:cardBackgroundColor="@color/color_gray">

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/tv_upload_pan"
                        style="@style/upload_text"
                        android:text="@string/upload_pan_card" />

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    style="@style/card_view"
                    android:layout_marginLeft="@dimen/dimens_15"
                    android:layout_weight="1"
                    android:alpha="0.8"
                    app:cardBackgroundColor="@color/color_gray">

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/tv_upload_adhar"
                        style="@style/upload_text"
                        android:text="@string/upload_aadhar_card" />
                </android.support.v7.widget.CardView>

            </LinearLayout>

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_bankAccount"
                style="@style/register_edit_text"
                android:hint="@string/bank_account_num"
                android:inputType="text"
                android:visibility="gone" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_ifscCode"
                style="@style/register_edit_text"
                android:hint="@string/ifsc_code"
                android:inputType="number"
                android:visibility="gone" />


            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_textView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dimens_5"
                android:fontFamily="@font/calibree_bold"
                android:text="@string/signing_up_text_View"
                android:textColor="@color/app_txt_white"
                android:textSize="@dimen/text_10" />


            <android.support.v7.widget.AppCompatButton
                android:id="@+id/sign_up_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimens_32"
                android:layout_marginTop="@dimen/dimens_15"
                android:background="@drawable/btn_bg_border"
                android:fontFamily="@font/calibree_bold"
                android:gravity="center"
                android:padding="@dimen/padding_10"
                android:text="@string/sign_up_btn"
                android:textColor="@color/md_white_1000"
                android:textSize="@dimen/text_14" />

            <include
                layout="@layout/partial_social_login_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>