<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/color_layout_bg"
    android:orientation="vertical"
    android:layout_margin="@dimen/dimens_5">


    <android.support.v7.widget.CardView
        android:id="@+id/order_details_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimens_5"
        app:cardBackgroundColor="@color/app_txt_white">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimens_10"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv_orderidd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/calibree_medium"
                    android:lines="1"
                    android:text="@string/order_id"
                    android:textColor="@color/color_text_gray"
                    android:textSize="@dimen/text_20" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv_ordersum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimens_1"
                    android:layout_toRightOf="@+id/tv_orderidd"
                    android:fontFamily="@font/calibree_medium"
                    android:lines="1"
                    android:text="@string/order_num"
                    android:textColor="@color/color_text_gray"
                    android:textSize="@dimen/text_20" />

            </RelativeLayout>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimens_5"
                android:fontFamily="@font/calibree_medium"
                android:lines="1"
                android:text="@string/placed_on"
                android:textColor="@color/color_adress_text"
                android:textSize="@dimen/text_14" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimens_5"
                android:fontFamily="@font/calibree_medium"
                android:lines="1"
                android:text="@string/delivered_on"
                android:textColor="@color/color_adress_text"
                android:textSize="@dimen/text_14" />


            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimens_5"
                android:fontFamily="@font/calibree_medium"
                android:lines="1"
                android:text="@string/shipping_adress"
                android:textColor="@color/color_text_gray"
                android:textSize="@dimen/text_14" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimens_5"
                android:ellipsize="end"
                android:fontFamily="@font/calibree_medium"
                android:lines="3"
                android:text="@string/no_72_address"
                android:textColor="@color/color_adress_text"
                android:textSize="@dimen/text_14" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_order_summary"
                    android:layout_marginTop="@dimen/dimens_5"
                    android:fontFamily="@font/calibree_medium"
                    android:lines="1"
                    android:text="@string/order_summary"
                    android:textColor="@color/color_text_gray"
                    android:textSize="@dimen/text_14" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_order_summary">

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/tv_ordertotal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimens_5"
                        android:fontFamily="@font/calibree_medium"
                        android:lines="1"
                        android:text="@string/total_amount"
                        android:textColor="@color/color_adress_text"
                        android:textSize="@dimen/text_14" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/tv_mrp_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimens_5"
                        android:layout_toRightOf="@+id/tv_ordertotal"
                        android:fontFamily="@font/calibree_bold"
                        android:text="@string/product_price_text"
                        android:textColor="@color/color_adress_text" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="@dimen/dimens_10"
                    android:layout_marginRight="@dimen/dimens_60">

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/tv1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/calibree_medium"
                        android:lines="1"
                        android:text="@string/status"
                        android:textColor="@color/color_text_gray"
                        android:textSize="@dimen/text_14" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/tv2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv1"
                        android:fontFamily="@font/calibree_medium"
                        android:text="@string/transist"
                        android:textColor="@color/color_adress_text" />

                </RelativeLayout>

            </RelativeLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_track_order"
        style="@style/recyclerView_vertical_style"
        tools:listitem="@layout/adapter_order_list" />

</LinearLayout>