<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/address_cardview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dimens_5"
    app:cardBackgroundColor="@color/app_txt_white"
    app:cardCornerRadius="@dimen/dimens_5"
    app:cardElevation="@dimen/dimens_2">

    <LinearLayout
        android:id="@+id/ll_address_selection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimens_10"
        android:background="@color/app_txt_white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_coupon_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/calibree_medium"
                android:text="@string/address_text"
                android:textColor="@color/color_black"
                android:textSize="@dimen/text_18" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_apply_coupon"
                android:layout_width="wrap_content"
                android:fontFamily="@font/calibree_medium"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dimens_10"
                android:text="@string/btn_apply"
                android:textColor="@color/colorPrimary"
                app:srcCompat="@drawable/ic_close" />

        </LinearLayout>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_condition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/calibree_medium"
            android:layout_marginTop="@dimen/dimens_5"
            android:text="@string/coupon_string" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_end_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/calibree_medium"
            android:layout_marginTop="@dimen/dimens_5"
            android:text="@string/text_date" />

    </LinearLayout>

</android.support.v7.widget.CardView>